--- a/client/index.html
+++ b/client/index.html
@@ -9,9 +9,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
   <link href="css/style.css" rel="stylesheet">
   <link href="node_modules/@coreui/chartjs/dist/css/coreui-chartjs.css" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 
-<body class="c-app flex-row align-items-center">
+<body class="c-app flex-row align-items-center" style="background-color: #3c4b64">
 
   <!-- Add your site or application content here -->
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
@@ -34,12 +35,12 @@
               <p class="text-muted">Check if company is trusted</p>
               <div class="input-group mb-3">
                 <div class="card-body">
-                  <form class="form-horizontal" action="" method="post">
+                  <form class="form-horizontal" action="" method="post" onSubmit="return false;">
                     <div class="form-group row">
                       <div class="col-md-12">
                         <div class="input-group">
                           <input class="form-control" id="search_input" type="text" name="input2-group2" placeholder="Type..." autocomplete="email"><span class="input-group-append">
-                                <button onclick="onSearch()" class="btn btn-primary" type="button">Search</button></span>
+                                <button id="search_btn" onclick="onSearch()" class="btn btn-info" type="button">Search</button></span>
                         </div>
                       </div>
                     </div>
@@ -53,13 +54,23 @@
   </div>
   </div>
 
-
   <!-- CoreUI and necessary plugins-->
   <script src="node_modules/@coreui/coreui/dist/js/coreui.bundle.min.js"></script>
   <!--[if IE]><!-->
   <script src="node_modules/@coreui/icons/js/svgxuse.min.js"></script>
   <!--<![endif]-->
   <script src="js/main.js"></script>
+  <script>
+
+    let input = document.getElementById("search_input");
+    input.addEventListener("keyup", function(event) {
+      if (event.key === "Enter") {
+        event.preventDefault();
+        document.getElementById("search_btn").click();
+      }
+    });
+
+  </script>
 </body>
 
 </html>
