connect to backend

--- a/client/home.html
+++ b/client/home.html
@@ -34,8 +34,8 @@
 <div class="loader" id="loader" style="display: none"></div>
 <div class="card-body">
   <div id="search_list" class="list-group" style="padding-top: 120px">
-    <h1>Search company</h1>
-    <p class="text-muted">Check if company is trusted</p>
+    <h1>Analysing companies</h1>
+    <p class="text-muted">Wait for result...</p>
   </div>
 </div>
 
