--- a/client/company.html
+++ b/client/company.html
@@ -43,9 +43,14 @@
           <use xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-people"></use>
         </svg>
       </div>
-      <div class="text-value-lg">87.500</div><small class="text-muted text-uppercase font-weight-bold">Alexa Rank</small>
+      <div id="alexa_box" class="text-value-lg">
+        <strong id="alexa_box_rate"></strong>
+        <small class="text-muted">/4</small>
+        <div id="alexa_box_state"></div>
+      </div>
+      <small class="text-muted text-uppercase font-weight-bold">Alexa Rank</small>
       <div class="progress progress-white progress-xs mt-3">
-        <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+        <div class="progress-bar" id="alexa_progressbar" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
       </div>
     </div>
   </div>
@@ -53,18 +58,29 @@
     <div>
     <div class="card">
       <div class="card-body">
-        <div class="text-muted text-right mb-4">
-          <svg class="c-icon c-icon-2xl">
-            <use xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-speech"></use>
-          </svg>
-        </div>
-        <div class="text-value-lg">972</div><small class="text-muted text-uppercase font-weight-bold">Test</small>
-        <div class="progress progress-xs mt-3 mb-0">
-          <div class="progress-bar bg-info" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-        </div>
+        <i id="scam_watcher_icon" aria-hidden="true" style="font-size: 100px;color: #39f;"></i>
+        <small id="scam_watcher_label" class="text-muted text-uppercase font-weight-bold" style="position: absolute;bottom: 50px; text-align: center; padding: 10px;">Test</small>
       </div>
     </div>
   </div>
+
+
+    <div>
+      <div class="card overflow-hidden">
+        <div class="card-body p-0 d-flex align-items-center">
+          <div class="bg-info py-4 px-5 mfe-3" style="padding-right: 0rem !important">
+            <svg class="c-icon c-icon-xl">
+              <use xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-laptop"></use>
+            </svg>
+          </div>
+          <div>
+            <div id="in_poland_label" class="text-value text-info">Targeted to Polish clients:</div>
+            <div id="in_poland_value" class="text-muted text-uppercase font-weight-bold small" style="text-align: center;"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+
   </div>
 
 
